--- a/Vanrise/Code/Resources/Resources.csproj
+++ b/Vanrise/Code/Resources/Resources.csproj
@@ -73,6 +73,14 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -97,12 +105,14 @@
     <Content Include="Databases\TrackingDB\Schema.sql" />
     <Content Include="Databases\TransactionDB\Data.sql" />
     <Content Include="Databases\TransactionDB\Schema.sql" />
+    <Content Include="Tools\v_bcp.exe" />
     <Content Include="DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll" />
     <Content Include="DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll" />
     <Content Include="DLLs\Microsoft.Practices.ServiceLocation.dll" />
     <Content Include="DLLs\Microsoft.Practices.Unity.dll" />
     <Content Include="DLLs\Microsoft.Practices.Unity.Interception.dll" />
     <Content Include="DLLs\Newtonsoft.Json.dll" />
+    <Content Include="DLLs\protobuf-net.dll" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -121,7 +131,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Tools\bcp.rll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
