--- a/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
@@ -63,12 +63,29 @@
     <Compile Include="BaseSQLDataManager.cs" />
     <Compile Include="BulkInsertInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Data\Vanrise.Data.csproj">
       <Project>{107DC891-2169-409F-9617-6D52723D05CE}</Project>
       <Name>Vanrise.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\bcp.rll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\v_bcp.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
