--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -20,9 +20,9 @@
 
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>-->
+    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
@@ -35,8 +35,8 @@
     <session-factory>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
-      <!--<property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactron;User ID=sa;Password=development@cce$$</property>-->
-      <property name="connection.connection_string">Server=192.168.110.185;Database=MMokdad;User ID=Development;Password=dev!123</property>
+      <property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>
+      <!--<property name="connection.connection_string">Server=192.168.110.185;Database=MMokdad;User ID=Development;Password=dev!123</property>-->
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TONE-ProtelMarch2012;User ID=sa;Password=vanrise@cce$$</property>-->
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=MMokdad;User ID=sa;Password=vanrise@cce$$</property>-->
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
