--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compressor.cs" />
+    <Compile Include="Utilities.cs" />
     <Compile Include="ObjectFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoBufSerializer.cs" />
