--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -222,6 +222,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.BusinessProcess.Client\Vanrise.BusinessProcess.Client.csproj">
+      <Project>{f5064a23-6e52-43da-affa-71425942ebf8}</Project>
+      <Name>Vanrise.BusinessProcess.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.BusinessProcess.Data.SQL\Vanrise.BusinessProcess.Data.SQL.csproj">
       <Project>{3f8405f6-45c3-4eef-9e59-a8b206de0aa2}</Project>
       <Name>Vanrise.BusinessProcess.Data.SQL</Name>
@@ -233,10 +237,6 @@
     <ProjectReference Include="..\Vanrise.BusinessProcess.Entities\Vanrise.BusinessProcess.Entities.csproj">
       <Project>{eb3cf5aa-ec32-4723-81e5-c4a0c0525d05}</Project>
       <Name>Vanrise.BusinessProcess.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vanrise.BusinessProcess\Vanrise.BusinessProcess.csproj">
-      <Project>{a5ee3349-b642-4cc7-b575-7c338821d63d}</Project>
-      <Name>Vanrise.BusinessProcess</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
