--- a/BusinessProcess/Code/Vanrise.Queueing.Entities/Vanrise.Queueing.Entities.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing.Entities/Vanrise.Queueing.Entities.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QueueActivator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueInstance.cs" />
     <Compile Include="QueueItem.cs" />
