--- a/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MemoryQueue.cs" />
     <Compile Include="PersistentQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueActivationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Queueing.Data\Vanrise.Queueing.Data.csproj">
